add state machine for tasks add specs for tasks and users validations

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -32,3 +32,7 @@ en:
     flash:
       create: 'You successfully created the task.'
       update: 'You successfully updated the task.'
+    status:
+      open: 'Open'
+      in_progress: 'In Progress'
+      done: 'Done'
