specs for app helper and some refactoring

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -32,7 +32,11 @@ en:
     flash:
       create: 'You successfully created the task.'
       update: 'You successfully updated the task.'
-    status:
-      open: 'Open'
-      in_progress: 'In Progress'
-      done: 'Done'
+  activerecord:
+    state_machines:
+      task:
+        status:
+          states:
+            in_progress: 'In Progress'
+            open: 'Open'
+            done: 'Done'
